Changes for 2.5.0

New features:
...G...... [ZBXNEXT-2325] added CPU guest and guest priority metrics to system.cpu.util[] item, supported on Linux kernels starting from 2.6.24 and 2.6.33 respectively (Juris)

Bug fixes:
...G...... [ZBX-8545] rewrote net.tcp.listen for Linux kernels 2.6.14 and above to employ the kernels NETLINK interface. Old method of information retrieval also improved (Juris)
...G...PS. [ZBX-8796] added get_process_info_by_thread() function prototype and renamed server_num, process_type and process_num local variables to eliminate conflict with the local ones (igors)
...G...PS. [ZBX-8763] fixed log message printing to syslog and undefined type log if debug level 5 is set (igors)
..F....... [ZBX-8671] fixed missing existence and permission checks for hosts and host groups (Krists)
..F....... [ZBX-7176] removed empty space in icon buttons (Ivo)
...G...PS. [ZBX-8736] added validation of timestamp values received by the server and sent via zabbix_sender (Juris)
..F....... [ZBX-8560] fixed web scenario HTTP proxy field placeholder content not fitting into input field (Ivo)
..F....... [ZBX-8570] fixed colons in frontend filters (Oleg)
..F....... [ZBX-8659] fixed graphs in screens not respecting "Show legend" setting when in dynamic mode (Krists)
.D........ [ZBX-5166] replaced '-' with '\-' in man-pages (Andris)
...G...PS. [ZBX-8391] added stronger command-line parameter validation, revised help and version messages, revised man-pages for Zabbix server, proxy, agent, sender and get utilities (Andris)
....I..... [ZBX-8658] made various changes to ODBC related m4 scripts to improve readability and library function availability (Juris)

--------------------------------------------------------------------------------
Changes for 2.4.1rc1

New features:

Bug fixes:
..F....... [ZBX-8753] fixed mass update to change host inventory (Sasha)
....I..... [ZBX-8744] fixed database upgrade procedure stopping when upgrade step was failed (Sasha)