@@ -163,7 +163,7 @@ function getActionMapBySysmap($sysmap, array $options = array()) {
 
 				$gotos['inventory'] = array('hostid' => $host['hostid']);
 
-				$gotos['latestData'] = array('hostid' => $host['hostid']);
+				$gotos['latestData'] = array('hostids' => array($host['hostid']));
 				break;
 
 			case SYSMAP_ELEMENT_TYPE_MAP:
